[gd_scene load_steps=7 format=3 uid="uid://6un3gpulvo7e"]

[ext_resource type="Script" path="res://addons/explore-editor-theme/tabs/EditorFonts.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ds8c70l2dnpy8" path="res://addons/explore-editor-theme/ui/CodePreview.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://c6mun6p3lk1k6" path="res://addons/explore-editor-theme/ui/FilterTool.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bg7phy5jdt0wl" path="res://addons/explore-editor-theme/ui/TypeTool.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://cykapqu53xah8" path="res://addons/explore-editor-theme/ui/SampleTool.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://bdtluesl718xb" path="res://addons/explore-editor-theme/ui/ResourceInspector.tscn" id="6"]

[node name="Fonts" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="StyleToolbar" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="Filter" parent="Layout/StyleToolbar" instance=ExtResource("3")]
layout_mode = 2
label_text = "Filter styles"

[node name="Type" parent="Layout/StyleToolbar" instance=ExtResource("4")]
layout_mode = 2

[node name="FontStyleView" type="HBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Layout/FontStyleView"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FontList" type="VBoxContainer" parent="Layout/FontStyleView/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FontPanel" type="VBoxContainer" parent="Layout/FontStyleView"]
visible = false
custom_minimum_size = Vector2(340, 0)
layout_mode = 2

[node name="Padding0" type="Control" parent="Layout/FontStyleView/FontPanel"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="FontName" type="Label" parent="Layout/FontStyleView/FontPanel"]
layout_mode = 2
autowrap_mode = 1

[node name="Padding1" type="Control" parent="Layout/FontStyleView/FontPanel"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="FontCode" parent="Layout/FontStyleView/FontPanel" instance=ExtResource("2")]
layout_mode = 2

[node name="FontInspector" parent="Layout/FontStyleView/FontPanel" instance=ExtResource("6")]
layout_mode = 2

[node name="EmptyPanel" type="Control" parent="Layout/FontStyleView"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2

[node name="SizeToolbar" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="Filter" parent="Layout/SizeToolbar" instance=ExtResource("3")]
layout_mode = 2
label_text = "Filter sizes"

[node name="Type" parent="Layout/SizeToolbar" instance=ExtResource("4")]
layout_mode = 2

[node name="FontSizeView" type="HBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="FontSizeList" type="ItemList" parent="Layout/FontSizeView"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FontSizePanel" type="VBoxContainer" parent="Layout/FontSizeView"]
visible = false
custom_minimum_size = Vector2(340, 0)
layout_mode = 2

[node name="Padding0" type="Control" parent="Layout/FontSizeView/FontSizePanel"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="FontSizeName" type="Label" parent="Layout/FontSizeView/FontSizePanel"]
layout_mode = 2
autowrap_mode = 1

[node name="Padding1" type="Control" parent="Layout/FontSizeView/FontSizePanel"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="FontSizeValue" type="Label" parent="Layout/FontSizeView/FontSizePanel"]
layout_mode = 2

[node name="Padding2" type="Control" parent="Layout/FontSizeView/FontSizePanel"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="FontSizeCode" parent="Layout/FontSizeView/FontSizePanel" instance=ExtResource("2")]
layout_mode = 2

[node name="EmptyPanel" type="Control" parent="Layout/FontSizeView"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2

[node name="Padding0" type="Control" parent="Layout"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="Sample" parent="Layout" instance=ExtResource("5")]
layout_mode = 2

[node name="FontPreview" type="Label" parent="Layout"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Sample Text"
vertical_alignment = 1
autowrap_mode = 3
